--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     rel="stylesheet" />
 
   <link rel="icon" href="assets/favicon.ico" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 
@@ -83,7 +83,7 @@
 
       <div class="nav-actions">
         <a href="#faq" class="btn ghost small">FAQ</a>
-        <a href="agenda/" target="_blank" rel="noopener" class="btn primary" data-track="cta_agenda">Agenda
+        <a href="/agenda.html" target="_blank" rel="noopener" class="btn primary" data-track="cta_agenda">Agenda
           sesión</a>
       </div>
     </nav>
@@ -553,12 +553,8 @@
     </div>
   </div>
   <footer class="site-footer" id="footer">
-    <div class="subtle legal-links">
-      <a href="aviso-legal/">Aviso legal</a>
-      <a href="politica-privacidad/">Privacidad</a>
-    </div>
   </footer>
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
   <script>
     (function () {
       const send = (event, payload = {}) => {
@@ -596,6 +592,17 @@
       });
     })();
   </script>
+  <footer class="site-footer" id="footer">
+    <div class="footer-inner">
+      <span class="footer-copy">© Aurum Studio</span>
+
+      <nav class="legal-links" aria-label="Legal">
+        <a href="/aviso-legal.html">Aviso legal</a>
+        <span class="sep">·</span>
+        <a href="/politica-privacidad.html">Privacidad</a>
+      </nav>
+    </div>
+  </footer>
 
 </body>
 
