--- a/agenda.html
+++ b/agenda.html
@@ -45,42 +45,39 @@
             </div>
 
             <div class="calendly-shell">
-                <div class="booking-grid">
-                    <div class="booking-cal">
+                <div class="booking-layout">
+                    <div class="booking-calendly">
                         <div class="calendly-inline-widget"
                             data-url="https://calendly.com/aurumstudioghl/30min?hide_gdpr_banner=1&background_color=07070a&text_color=f6f3ee&primary_color=d6b56d"
-                            style="min-width:320px;height:780px;"></div>
+                            style="min-width:320px;height:780px;">
+                        </div>
                         <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-
-
-
-                        <aside class="booking-info">
-                            <div class="info-card">
-                                <div class="info-kicker">Antes de reservar</div>
-                                <h3 class="info-title">Para sacar el máximo provecho del tiempo necesitamos que:</h3>
-
-                                <ul class="info-list">
-                                    <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
-                                        estrés.</li>
-                                    <li>Estés en un ambiente tranquilo y silencioso, con buena conexión a internet.
-                                    </li>
-                                    <li>
-                                        Puedes encender la camara para que la conversacion sea mas personal (si no,
-                                        probablemente reagendaremos la reunión).
-                                    </li>
-                                </ul>
-
-                                <div class="info-divider"></div>
-
-                                <p class="info-strong">Esto NO es una llamada de coaching.</p>
-                                <p class="info-muted">
-                                    En esta llamada veremos si podemos ayudarte y, en caso de encajar, el siguiente paso
-                                    para trabajar juntos.
-                                </p>
-                            </div>
-                        </aside>
                     </div>
+
+                    <aside class="booking-info">
+                        <div class="info-card">
+                            <div class="info-kicker">Antes de reservar</div>
+                            <h3 class="info-title">Para sacar el máximo provecho del tiempo necesitamos que:</h3>
+
+                            <ul class="info-list">
+                                <li>Te presentes un par de minutos antes para entrar a la llamada con calma y sin
+                                    estrés.</li>
+                                <li>Estés en un ambiente tranquilo y silencioso, con buena conexión a internet.</li>
+                                <li>Puedes encender la cámara para que la conversación sea más personal (si no,
+                                    probablemente reagendaremos la reunión).</li>
+                            </ul>
+
+                            <div class="info-divider"></div>
+
+                            <p class="info-strong">Esto NO es una llamada de coaching.</p>
+                            <p class="info-muted">
+                                En esta llamada veremos si podemos ayudarte y, en caso de encajar, el siguiente paso
+                                para trabajar juntos.
+                            </p>
+                        </div>
+                    </aside>
                 </div>
+            </div>
         </section>
 
 
