--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body>
-  <body class="legal-page">
+<body class="legal-page">
+  <main class="legal-body">
     <nav class="nav">
       <div class="nav-left">
         <a class="brand" href="index.html" aria-label="Aurum Studio">
@@ -95,9 +95,10 @@
         <a href="aviso-legal.html">Aviso legal</a>
         <a href="politica-privacidad.html">Privacidad</a>
       </div>
-    </footer>
+  </main>
+  </footer>
 
 
-  </body>
+</body>
 
 </html>
