--- a/agenda.html
+++ b/agenda.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <link rel="canonical" href="https://www.aurumstudio.es/agenda.html">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
