--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+  <link rel="canonical" href="https://www.aurumstudio.es/aviso-legal.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aviso legal | Aurum Studio</title>
