--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+  <link rel="canonical" href="https://www.aurumstudio.es/politica-privacidad.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Política de privacidad | Aurum Studio</title>
